implement css layout

--- a/lab-css-layout/index.html
+++ b/lab-css-layout/index.html
@@ -41,7 +41,7 @@
                 <h2>Layout 0</h2>
                 <p>22127459 - Phạm Thanh Vinh</p>
                 <img src="./assets/layout0.png" alt="">
-                <a href="" class="btn">View Layout 0</a>
+                <a href="./layout0/index.html" class="btn">View Layout 0</a>
             </div>
 
             <div class="layout-card">
