--- a/lab-css-layout/layout0/float/index.html
+++ b/lab-css-layout/layout0/float/index.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Float</title>
+  <title>22127459 - Layout 0 - Float</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Float Layout -->
+  <nav class="layout-nav">
+    <div class="nav-container">
+        <a href="../../index.html" class="nav-link">Home</a>
+        <a href="../index.html" class="nav-link">Layout 0</a>
+        <a href="../grid/index.html" class="nav-link">Grid Layout</a>
+        <a href="../flexbox/index.html" class="nav-link">Flexbox Layout</a>
+        <a href="../float/index.html" class="nav-link active">Float Layout</a>
+    </div>
+  </nav>
+
   <div class="float-container">
     <div class="float-logo">Logo</div>
     <nav class="float-nav">Navigation</nav>
