--- a/lab-css-layout/layout0/grid/index.html
+++ b/lab-css-layout/layout0/grid/index.html
@@ -4,10 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid</title>
+  <title>22127459 - Layout 0 - Grid</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <nav class="layout-nav">
+    <div class="nav-container">
+        <a href="../../index.html" class="nav-link">Home</a>
+        <a href="../index.html" class="nav-link">Layout 0</a>
+        <a href="../grid/index.html" class="nav-link active">Grid Layout</a>
+        <a href="../flexbox/index.html" class="nav-link">Flexbox Layout</a>
+        <a href="../float/index.html" class="nav-link">Float Layout</a>
+    </div>
+  </nav>
   <div class="grid-container">
     <div class="grid-logo">Logo</div>
     <nav class="grid-nav">Navigation</nav>
